k3s-manifests/ingresses/code-server.yaml
---
# code-server - VS Code in the Browser
# Domain: code.halitdincer.com
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - code.halitdincer.com
    secretName: code-server-tls
  rules:
  - host: code.halitdincer.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: code-server
            port:
              number: 8080
