k3s-manifests/ingresses/gatus.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatus
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - status.halitdincer.com
      secretName: gatus-tls
  rules:
    - host: status.halitdincer.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gatus
                port:
                  name: http
