k3s-manifests/ingresses/homepage.yaml
---
# Homepage Dashboard
# Domain: home.halitdincer.com
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - home.halitdincer.com
    secretName: homepage-tls
  rules:
  - host: home.halitdincer.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homepage
            port:
              number: 3000
