k3s-manifests/ingresses/iris.yaml
# iris - Personal capability API
# Domain: iris.halitdincer.com
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iris
  namespace: iris
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: iris.halitdincer.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iris
                port:
                  number: 8000
