k3s-manifests/ingresses/personal-site.yaml
# personal-site - Personal website
# Domain: www.halitdincer.com
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-site
  namespace: personal-site
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: www.halitdincer.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-site
                port:
                  number: 80
