k3s-manifests/ingresses/teslamate.yaml
---
# TeslaMate - Tesla Data Logger
# Domain: teslamate.halitdincer.com
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teslamate
  namespace: teslamate
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: teslamate.halitdincer.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: teslamate
            port:
              number: 4000

---
# TeslaMate Grafana Dashboards
# Domain: teslamate-grafana.halitdincer.com
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teslamate-grafana
  namespace: teslamate
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: teslamate-grafana.halitdincer.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: teslamate-grafana
            port:
              number: 3000
